# FullStackFilmFlood

./: docker-compose.yml  listfilm.json  local.bash
backend-fastapi/: .env  Dockerfile  main.py  pyproject.toml
backend-fastapi/core/: schemas.py  settings.py
backend-fastapi/email_send/: code_send_email.py  send_post_request.py
backend-nestjs/: Dockerfile  local.bash  package.json
backend-nestjs/prisma/migrations/20241209174352_/: migration.sql
backend-nestjs/prisma/schema/: kinofilm.prisma  schema.prisma  user.prisma
backend-nestjs/src/: app.module.ts  main.ts  redis.service.ts
backend-nestjs/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend-nestjs/src/auth/dtos/: auth_user.dto.ts
backend-nestjs/src/auth/email/: email.service.ts
backend-nestjs/src/auth/jwt/: jwt.controller.ts  jwt.module.ts  jwt.service.ts
backend-nestjs/src/film_res/: film_res.controller.ts  film_res.module.ts  film_res.service.ts
backend-nestjs/src/jwt-key/: private.key  public.key
backend-nestjs/src/s3/: s3.controller.ts  s3.module.ts  s3.service.ts
frontend-nextjs/: Dockerfile  local.bash  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend-nextjs/src/app/: layout.tsx  page.tsx
frontend-nextjs/src/app/auth/: page.tsx
frontend-nextjs/src/app/film/: layout.tsx  page.tsx
frontend-nextjs/src/app/profile/: page.tsx
frontend-nextjs/src/components/AuthPage/: AuthModal.tsx
frontend-nextjs/src/service/: AuthService.ts  authservice.interface.ts
frontend-nextjs/src/stores/: userData.interface.ts  userData.ts
(+16 files in other folders)
