[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["DeveloperInal <166642110+DeveloperInal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.31.1"
loguru = "^0.7.2"
jinja2 = "^3.1.4"
requests = "^2.32.3"
bcrypt = "^4.2.0"
redis = "^5.2.0"
httpx = "^0.27.2"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
